[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragnadoc"
version = "0.1.0"
description = ""
authors = [
    { name = "Justin Garofolo", email = "justin@garofolo.net" }
]
dependencies = [
    "click",
    "PyYAML"
]
dynamic = ["classifiers"]

[project.scripts]
ragnadoc = "ragnadoc.main:cli"

[tool.hatch.metadata]
include = ["ragnadoc/**/*"]