[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragnadoc"
version = "0.1.0"
description = ""
authors = [
    { name = "Justin Garofolo", email = "justin@garofolo.net" }
]
dependencies = [
    "numpy",
    "click",
    "pyyaml",
    "rich",
    "pygithub",
    "pinecone[grpc]",
    "tiktoken",
    "openai",
    "langchain",
    "fastapi",
    "uvicorn"
]
dynamic = ["classifiers"]

[project.scripts]
ragnadoc = "ragnadoc.main:cli"

[tool.hatch.metadata]
include = ["ragnadoc/**/*"]

[tool.hatch.envs.default.scripts]
pre-install = "pip config set global.only-binary numpy"
